[gd_scene format=3 uid="uid://b6a4r6lsoh672"]

[ext_resource type="Script" uid="uid://dniywsmlar4su" path="res://Main/Sprites/sprite_object.gd" id="1_b12nh"]
[ext_resource type="Script" uid="uid://duy4rt0mbcfdi" path="res://Main/Objects/PowerUp/powerAnim.gd" id="1_ewxoo"]
[ext_resource type="Script" uid="uid://vaa6u2v04syn" path="res://Main/Objects/PowerUp/power_up.gd" id="1_qc3lt"]
[ext_resource type="Shader" uid="uid://b6f6nyhhee76m" path="res://Main/PaletteShad.gdshader" id="2_ewxoo"]
[ext_resource type="Texture2D" uid="uid://b735c5t78osut" path="res://Palette/SPRPal4.png" id="3_b12nh"]
[ext_resource type="Texture2D" uid="uid://cpwahjdy8li86" path="res://Palette/MainPal.png" id="4_6m84m"]
[ext_resource type="Texture2D" uid="uid://cugaits6cfj6r" path="res://Char/SPR.png" id="5_xxrb4"]
[ext_resource type="Script" uid="uid://bunknk0g16tvh" path="res://Main/Sprites/sprite_tile.gd" id="6_mqnj6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ewxoo"]
shader = ExtResource("2_ewxoo")
shader_parameter/oldP = ExtResource("4_6m84m")
shader_parameter/newP = ExtResource("3_b12nh")
shader_parameter/precision = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qc3lt"]
shader = ExtResource("2_ewxoo")
shader_parameter/oldP = ExtResource("4_6m84m")
shader_parameter/newP = ExtResource("3_b12nh")
shader_parameter/precision = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6m84m"]
shader = ExtResource("2_ewxoo")
shader_parameter/oldP = ExtResource("4_6m84m")
shader_parameter/newP = ExtResource("3_b12nh")
shader_parameter/precision = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xxrb4"]
shader = ExtResource("2_ewxoo")
shader_parameter/oldP = ExtResource("4_6m84m")
shader_parameter/newP = ExtResource("3_b12nh")
shader_parameter/precision = 0.1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qc3lt"]
size = Vector2(12, 12)

[node name="PowerUp" type="Node2D" unique_id=1411359071]
script = ExtResource("1_qc3lt")

[node name="PowerAnim" type="Node" parent="." unique_id=819879914 node_paths=PackedStringArray("spr_object")]
script = ExtResource("1_ewxoo")
spr_object = NodePath("../PowerObject")

[node name="PowerObject" type="Node2D" parent="." unique_id=25107422 node_paths=PackedStringArray("animation")]
script = ExtResource("1_b12nh")
animation = NodePath("../PowerAnim")
metadata/_custom_type_script = "uid://dniywsmlar4su"

[node name="SpriteTile" type="Sprite2D" parent="PowerObject" unique_id=228862337]
texture_filter = 1
material = SubResource("ShaderMaterial_ewxoo")
texture = ExtResource("5_xxrb4")
centered = false
region_enabled = true
region_rect = Rect2(48, 56, 8, 8)
script = ExtResource("6_mqnj6")
palInt = 2
metadata/_custom_type_script = "uid://bunknk0g16tvh"

[node name="SpriteTile2" type="Sprite2D" parent="PowerObject" unique_id=221443467]
texture_filter = 1
material = SubResource("ShaderMaterial_qc3lt")
position = Vector2(8, 0)
texture = ExtResource("5_xxrb4")
centered = false
region_enabled = true
region_rect = Rect2(56, 56, 8, 8)
script = ExtResource("6_mqnj6")
palInt = 2
metadata/_custom_type_script = "uid://bunknk0g16tvh"

[node name="SpriteTile3" type="Sprite2D" parent="PowerObject" unique_id=2139445369]
texture_filter = 1
material = SubResource("ShaderMaterial_6m84m")
position = Vector2(0, 8)
texture = ExtResource("5_xxrb4")
centered = false
region_enabled = true
region_rect = Rect2(64, 56, 8, 8)
script = ExtResource("6_mqnj6")
palInt = 2
metadata/_custom_type_script = "uid://bunknk0g16tvh"

[node name="SpriteTile4" type="Sprite2D" parent="PowerObject" unique_id=613932123]
texture_filter = 1
material = SubResource("ShaderMaterial_xxrb4")
position = Vector2(8, 8)
texture = ExtResource("5_xxrb4")
centered = false
region_enabled = true
region_rect = Rect2(72, 56, 8, 8)
script = ExtResource("6_mqnj6")
palInt = 2
metadata/_custom_type_script = "uid://bunknk0g16tvh"

[node name="PowerCollision" type="Node2D" parent="." unique_id=767785336]

[node name="WallCast" type="RayCast2D" parent="PowerCollision" unique_id=1484034034]
position = Vector2(8, 8)
target_position = Vector2(8, 0)
hit_from_inside = true

[node name="FloorCast" type="RayCast2D" parent="PowerCollision" unique_id=2145774945]
position = Vector2(8, 15)
target_position = Vector2(0, 8)
hit_from_inside = true

[node name="Area2D" type="Area2D" parent="PowerCollision" unique_id=1396389576 groups=["PowerUp"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerCollision/Area2D" unique_id=863350084]
position = Vector2(8, 7)
shape = SubResource("RectangleShape2D_qc3lt")
